--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/PaulusUnexpendableTurtle/spellcaster#readme",
   "dependencies": {
+    "papaparse": "^4.3.7",
     "socket.io": "^2.1.0"
   }
 }
