bug fixes & new cards sender
Signed-off-by: Paul Sokolov Jr <sokolov.p64@gmail.com>

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "multiplayer card game about casting spells",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/PaulusUnexpendableTurtle/spellcaster#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "nodemailer": "^4.6.4",
     "papaparse": "^4.3.7",
     "socket.io": "^2.1.0"
   }
